added comment service and todo service

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,3 +24,11 @@
 footer {
     margin: 50px 0;
 }
+
+h3 {
+    margin-top: -2px !important;
+}
+
+.padding-left-9 {
+    padding-left: 15px !important;
+}
